-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 2.9.0
-
Fix Version/s: Impala 3.2.0
-
Component/s: Backend
-
Labels:
-
Target Version:
-
Epic Color:ghx-label-8
When queries are executed from Hue and hit the idle query timeout then the query duration keeps going up even though the query was cancelled and it is not actually doing any more work. The end time is only set when the query is actually unregistered.
Queries below finished in 1s640ms while the reported time is much longer.
User | Default Db | Statement | Query Type | Start Time | Waiting Time | Duration | Scan Progress | State | Last Event |
|
Resource Pool | Details | Action |
---|---|---|---|---|---|---|---|---|---|---|---|---|---|
hue/va1026.halxg.cloudera.com@HALXG.CLOUDERA.COM | tpcds_1000_parquet | select count![]() |
QUERY | 2017-05-31 09:38:20.472804000 | 4m27s | 4m32s | 261 / 261 ( 100%) | FINISHED | First row fetched | 1 | root.default | Details | Close |
hue/va1026.halxg.cloudera.com@HALXG.CLOUDERA.COM | tpcds_1000_parquet | select count![]() |
QUERY | 2017-05-31 08:38:52.780237000 | 2017-05-31 09:38:20.289582000 | 59m27s | 261 / 261 ( 100%) | FINISHED | 1 | root.default | Details |
- is duplicated by
-
IMPALA-5555 Add timeline event to query profile to indicate that it is finished
-
- Resolved
-
- is related to
-
IMPALA-5285 Account for missing significant contributors to query time in exec summary
-
- Open
-
- relates to
-
IMPALA-5555 Add timeline event to query profile to indicate that it is finished
-
- Resolved
-